--- a/Act13ConvertidorWCF-SOLUCION/Act13ConvertidorWCF/Act13ConvertidorWCF.csproj
+++ b/Act13ConvertidorWCF-SOLUCION/Act13ConvertidorWCF/Act13ConvertidorWCF.csproj
@@ -44,9 +44,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConvertidorClima.cs" />
     <Compile Include="ConvertidorDivisas.cs" />
+    <Compile Include="IServicioConvertidorClima.cs" />
     <Compile Include="IServicioConvertidorDivisas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServicioConvertidorClima.cs" />
     <Compile Include="ServicioConvertidorDivisas.cs" />
   </ItemGroup>
   <ItemGroup>
